--- a/data-creation.ipynb
+++ b/data-creation.ipynb
@@ -9,21 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No existing file found for games.csv. Generating data...\n",
-      "No existing file found for customers.csv. Generating data...\n",
-      "No existing file found for seating_chart.csv. Generating data...\n",
+      "Loading existing data from games.csv...\n",
+      "Loading existing data from customers.csv...\n",
+      "Loading existing data from seating_chart.csv...\n",
       "No existing file found for ticket_sales.csv. Generating data...\n",
-      "No existing file found for food_items.csv. Generating data...\n",
-      "No existing file found for food_beverage_sales.csv. Generating data...\n",
-      "No existing file found for merchandise_items.csv. Generating data...\n",
-      "No existing file found for merchandise_sales.csv. Generating data...\n",
+      "Loading existing data from food_items.csv...\n",
+      "Loading existing data from food_beverage_sales.csv...\n",
+      "Loading existing data from merchandise_items.csv...\n",
+      "Loading existing data from merchandise_sales.csv...\n",
       "All tables have been generated or loaded successfully.\n",
       "\n",
       "Sample Data:\n",
@@ -70,12 +70,12 @@
       "3   Upper Bowl\n",
       "4  Super Boxes\n",
       "Ticket Sales Table:\n",
-      "    GameID SeatingType  CustomerID  TicketPrice ($)  TicketID\n",
-      "0       1   Courtside       17252              500         1\n",
-      "1       1   Courtside       10776              500         2\n",
-      "2       1   Courtside       13117              500         3\n",
-      "3       1   Courtside       16982              500         4\n",
-      "4       1   Courtside        1852              500         5\n",
+      "    TicketID  GameID  CustomerID SeatingType  TicketPrice ($)\n",
+      "0         1       1       15716   Courtside             1771\n",
+      "1         2       1       14730   Courtside             1778\n",
+      "2         3       1        1608   Courtside             1662\n",
+      "3         4       1       15329   Courtside             1618\n",
+      "4         5       1        8745   Courtside             1782\n",
       "Food Items Table:\n",
       "    FoodItemID     FoodName  Price ($)\n",
       "0           1      Hot Dog          5\n",
@@ -84,12 +84,12 @@
       "3           4        Fries          4\n",
       "4           5  Pizza Slice          8\n",
       "Food & Beverage Sales Table:\n",
-      "    GameID  CustomerID                  ItemsPurchased  AmountSpent ($)\n",
-      "0       1        9823                       Ice Cream                6\n",
-      "1       1        5268  Soda, Chicken Tenders, Pretzel               20\n",
-      "2       1        9467              Popcorn, Ice Cream               12\n",
-      "3       1       19432          Hot Dog, Fries, Coffee               13\n",
-      "4       1       17576                 Wine, Ice Cream               16\n",
+      "    OrderID  GameID  CustomerID  FoodItemID  AmountSpent ($)\n",
+      "0        1       1        4368           4                4\n",
+      "1        2       1        3815          14                6\n",
+      "2        3       1        3815           5                8\n",
+      "3        4       1        3815           2                7\n",
+      "4        5       1        9931           5                8\n",
       "Merchandise Items Table:\n",
       "    ProductID   ProductName  Price ($)\n",
       "0          1   Home Jersey         80\n",
@@ -98,12 +98,12 @@
       "3          4         Scarf         20\n",
       "4          5      Keychain         10\n",
       "Merchandise Sales Table:\n",
-      "    GameID  CustomerID                       ItemsPurchased  AmountSpent ($)\n",
-      "0       1        2258                          Team Jacket              100\n",
-      "1       1       12144                             Backpack               50\n",
-      "2       1        7991                    T-Shirt, Backpack               75\n",
-      "3       1        4226  Water Bottle, Keychain, Team Poster               34\n",
-      "4       1        9035                          Away Jersey               85\n"
+      "    TransactionID  GameID  CustomerID  ProductID  AmountSpent ($)\n",
+      "0              1       1        4368         17               20\n",
+      "1              2       1        7139          9               12\n",
+      "2              3       1        7139          5               10\n",
+      "3              4       1        7139          2               85\n",
+      "4              5       1       11666         10               50\n"
      ]
     }
    ],
@@ -184,18 +184,19 @@
     "    save_to_csv(seating_chart, file_paths['seating_chart'])\n",
     "    return seating_chart\n",
     "\n",
-    "# Function to generate ticket sales data\n",
     "def generate_ticket_sales():\n",
     "    games = pd.read_csv(file_paths['games'])\n",
     "    customers = pd.read_csv(file_paths['customers'])\n",
-    "    seating_chart = pd.read_csv(file_paths['seating_chart'])\n",
-    "    ticket_prices = {\n",
-    "        \"Courtside\": 500,\n",
-    "        \"Lower Bowl\": 250,\n",
-    "        \"Plaza Level\": 150,\n",
-    "        \"Upper Bowl\": 100,\n",
-    "        \"Super Boxes\": 450\n",
+    "\n",
+    "    # Define ticket price ranges for each seating type\n",
+    "    ticket_price_ranges = {\n",
+    "        \"Courtside\": (1500, 1800),\n",
+    "        \"Lower Bowl\": (300, 700),\n",
+    "        \"Plaza Level\": (150, 300),\n",
+    "        \"Upper Bowl\": (50, 120),\n",
+    "        \"Super Boxes\": (200, 400)\n",
     "    }\n",
+    "\n",
     "    ticket_sales = []\n",
     "\n",
     "    for game_id, attendance in zip(games['GameID'], games['Attendance']):\n",
@@ -207,23 +208,30 @@
     "            \"Super Boxes\": int(attendance * 0.05),\n",
     "        }\n",
     "\n",
+    "        # Adjust allocation to match attendance\n",
     "        total_allocated = sum(allocation.values())\n",
     "        if total_allocated < attendance:\n",
     "            allocation[\"Upper Bowl\"] += attendance - total_allocated\n",
     "\n",
     "        for seating_type, num_tickets in allocation.items():\n",
-    "            ticket_data = pd.DataFrame({\n",
-    "                'GameID': [game_id] * num_tickets,\n",
-    "                'SeatingType': [seating_type] * num_tickets,\n",
-    "                'CustomerID': np.random.choice(customers[\"CustomerID\"], num_tickets, replace=False),\n",
-    "                'TicketPrice ($)': [ticket_prices[seating_type]] * num_tickets\n",
-    "            })\n",
-    "            ticket_sales.append(ticket_data)\n",
+    "            for _ in range(num_tickets):\n",
+    "                customer_id = np.random.choice(customers[\"CustomerID\"])\n",
+    "                ticket_price = np.random.randint(\n",
+    "                    ticket_price_ranges[seating_type][0],\n",
+    "                    ticket_price_ranges[seating_type][1] + 1\n",
+    "                )\n",
+    "                ticket_sales.append({\n",
+    "                    'TicketID': len(ticket_sales) + 1,\n",
+    "                    'GameID': game_id,\n",
+    "                    'CustomerID': customer_id,\n",
+    "                    'SeatingType': seating_type,\n",
+    "                    'TicketPrice ($)': ticket_price\n",
+    "                })\n",
     "\n",
-    "    ticket_sales_df = pd.concat(ticket_sales, ignore_index=True)\n",
-    "    ticket_sales_df[\"TicketID\"] = range(1, len(ticket_sales_df) + 1)\n",
-    "    save_to_csv(ticket_sales_df, file_paths[\"ticket_sales\"])\n",
-    "    return ticket_sales_df\n",
+    "    ticket_sales_table = pd.DataFrame(ticket_sales)\n",
+    "    save_to_csv(ticket_sales_table, file_paths[\"ticket_sales\"])\n",
+    "    return ticket_sales_table\n",
+    "\n",
     "\n",
     "# Function to generate food items table\n",
     "def generate_food_items():\n",
@@ -250,59 +258,67 @@
     "    save_to_csv(merchandise_items, file_paths['merchandise_items'])\n",
     "    return merchandise_items\n",
     "\n",
-    "# Function to generate food and beverage sales\n",
     "def generate_food_beverage_sales():\n",
     "    games = pd.read_csv(file_paths['games'])\n",
     "    customers = pd.read_csv(file_paths['customers'])\n",
     "    food_items = pd.read_csv(file_paths['food_items'])\n",
+    "    \n",
     "    food_beverage_sales = []\n",
     "    for game_id, attendance in zip(games['GameID'], games['Attendance']):\n",
+    "        # Number of transactions\n",
     "        num_transactions = np.random.randint(int(attendance * 0.2), int(attendance * 0.5))\n",
+    "        \n",
     "        for _ in range(num_transactions):\n",
     "            customer_id = np.random.choice(customers['CustomerID'])\n",
-    "            food_items_purchased = np.random.choice(food_items['FoodName'], size=np.random.randint(1, 4), replace=False)\n",
-    "            total_spent = sum(\n",
-    "                food_items.loc[food_items['FoodName'] == item, 'Price ($)'].values[0]\n",
-    "                for item in food_items_purchased\n",
-    "            )\n",
-    "            food_beverage_sales.append({\n",
-    "                'GameID': game_id,\n",
-    "                'CustomerID': customer_id,\n",
-    "                'ItemsPurchased': ', '.join(food_items_purchased),\n",
-    "                'AmountSpent ($)': total_spent\n",
-    "            })\n",
+    "            num_items = np.random.randint(1, 4)  # Number of items in the transaction\n",
+    "            selected_items = np.random.choice(food_items['FoodItemID'], num_items, replace=False)\n",
+    "            \n",
+    "            for item_id in selected_items:\n",
+    "                item_price = food_items.loc[food_items['FoodItemID'] == item_id, 'Price ($)'].values[0]\n",
+    "                food_beverage_sales.append({\n",
+    "                    'OrderID': len(food_beverage_sales) + 1,\n",
+    "                    'GameID': game_id,\n",
+    "                    'CustomerID': customer_id,\n",
+    "                    'FoodItemID': item_id,\n",
+    "                    'AmountSpent ($)': item_price\n",
+    "                })\n",
+    "    \n",
     "    food_beverage_sales_table = pd.DataFrame(food_beverage_sales)\n",
     "    save_to_csv(food_beverage_sales_table, file_paths['food_beverage_sales'])\n",
     "    return food_beverage_sales_table\n",
+    "\n",
     "\n",
     "# Function to generate merchandise sales\n",
     "def generate_merchandise_sales():\n",
     "    games = pd.read_csv(file_paths['games'])\n",
     "    customers = pd.read_csv(file_paths['customers'])\n",
     "    merchandise_items = pd.read_csv(file_paths['merchandise_items'])\n",
+    "    \n",
     "    merchandise_sales = []\n",
-    "\n",
+    "    \n",
     "    for game_id, attendance in zip(games['GameID'], games['Attendance']):\n",
+    "        # Number of transactions\n",
     "        num_transactions = np.random.randint(int(attendance * 0.1), int(attendance * 0.4))\n",
+    "        \n",
     "        for _ in range(num_transactions):\n",
     "            customer_id = np.random.choice(customers['CustomerID'])\n",
-    "            merch_items_purchased = np.random.choice(\n",
-    "                merchandise_items['ProductName'], size=np.random.randint(1, 4), replace=False\n",
-    "            )\n",
-    "            total_spent = sum(\n",
-    "                merchandise_items.loc[merchandise_items['ProductName'] == item, 'Price ($)'].values[0]\n",
-    "                for item in merch_items_purchased\n",
-    "            )\n",
-    "            merchandise_sales.append({\n",
-    "                'GameID': game_id,\n",
-    "                'CustomerID': customer_id,\n",
-    "                'ItemsPurchased': ', '.join(merch_items_purchased),\n",
-    "                'AmountSpent ($)': total_spent\n",
-    "            })\n",
-    "\n",
+    "            num_items = np.random.randint(1, 4)  # Number of items in the transaction\n",
+    "            selected_items = np.random.choice(merchandise_items['ProductID'], num_items, replace=False)\n",
+    "            \n",
+    "            for product_id in selected_items:\n",
+    "                product_price = merchandise_items.loc[merchandise_items['ProductID'] == product_id, 'Price ($)'].values[0]\n",
+    "                merchandise_sales.append({\n",
+    "                    'TransactionID': len(merchandise_sales) + 1,\n",
+    "                    'GameID': game_id,\n",
+    "                    'CustomerID': customer_id,\n",
+    "                    'ProductID': product_id,\n",
+    "                    'AmountSpent ($)': product_price\n",
+    "                })\n",
+    "    \n",
     "    merchandise_sales_table = pd.DataFrame(merchandise_sales)\n",
     "    save_to_csv(merchandise_sales_table, file_paths['merchandise_sales'])\n",
     "    return merchandise_sales_table\n",
+    "\n",
     "\n",
     "# Main function to generate or load all tables\n",
     "def main():\n",
